testsuite/tests/parser/should_fail/T13600b.stderr

T13600b.hs:3:3: error:
    Did you forget to activate -XBangPatterns ?
    If not, try adding a space before the bang
    ! (Just x)

